--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title> BIKE WPI </title>
 </head>
 
